fixed odd title spacing on projects

--- a/src/components/Project/style.css
+++ b/src/components/Project/style.css
@@ -67,4 +67,7 @@
       perspective: 1000px;
     }
 
+    .projects .title {
+      height: 150px;
+    }
   }
